# sports-skills

./: .gitignore  CHANGELOG.md  README.md  README_PYPI.md  pyproject.toml
site/: index.html
skills/cfb-data/: SKILL.md
skills/fastf1/: SKILL.md
skills/fastf1/references/: api-reference.md
skills/golf-data/: SKILL.md
skills/golf-data/references/: api-reference.md
skills/machina/: SKILL.md
skills/nfl-data/: SKILL.md
skills/nfl-data/references/: api-reference.md
skills/polymarket/: SKILL.md
skills/sports-reporter/: SKILL.md
skills/sports-reporter/references/: api-reference.md  article-templates.md  sport-mapping.md
skills/volleyball-data/: SKILL.md
skills/volleyball-data/references/: api-reference.md  competition-ids.md
skills/watch/: SKILL.md
skills/watch/references/: api-reference.md
skills/xctf-data/: SKILL.md
skills/xctf-data/references/: api-reference.md
src/sports_skills/: __init__.py  __main__.py  cli.py
src/sports_skills/f1/: __init__.py  _connector.py
src/sports_skills/football/: __init__.py  _connector.py
src/sports_skills/kalshi/: __init__.py  _connector.py
src/sports_skills/metadata/: __init__.py
src/sports_skills/nba/: __init__.py  _cdn.py  _connector.py
src/sports_skills/nfl/: __init__.py  _nflverse.py
src/sports_skills/polymarket/: __init__.py  _calcs.py
src/sports_skills/volleyball/: __init__.py  _nevobo.py
src/sports_skills/watch/: __init__.py  _diff.py  _engine.py  _output.py  _storage.py
src/sports_skills/xctf/: __init__.py  _connector.py
tests/: test_calcs.py  test_imports.py  test_markets.py  test_unit.py  test_watch.py
