[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sports-skills"
version = "0.15.4"
description = "Lightweight Python SDK for sports data — football, F1, NFL, NBA, WNBA, NHL, MLB, tennis, CFB, CBB, golf, prediction markets, betting analysis, and news"
readme = "README_PYPI.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Machina Sports", email = "hello@machina.gg" },
]
keywords = ["sports", "football", "f1", "nfl", "nba", "wnba", "nhl", "mlb", "tennis", "atp", "wta", "cfb", "cbb", "college-football", "college-basketball", "ncaa", "golf", "pga", "lpga", "polymarket", "kalshi", "prediction-markets", "betting", "odds-comparison", "arbitrage", "news"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "feedparser>=6.0",
]

[project.optional-dependencies]
f1 = ["fastf1>=3.0", "pandas>=2.0"]
nfl = ["nfl-data-py>=0.3"]
nba = []
wnba = []
nhl = []
mlb = []
tennis = []
cfb = []
cbb = []
golf = []
polymarket = ["py_clob_client>=0.1.8"]
all = ["fastf1>=3.0", "pandas>=2.0", "nfl-data-py>=0.3", "py_clob_client>=0.1.8"]
dev = ["ruff>=0.9", "pytest>=8.0", "fastf1>=3.0", "pandas>=2.0"]

[project.scripts]
sports-skills = "sports_skills.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",     # line too long — handled by formatter
    "E741",     # ambiguous variable name — false positives on comprehension vars
    "SIM102",   # nested if → combined if — often less readable
    "SIM103",   # return condition directly — readability preference
    "SIM105",   # contextlib.suppress — try/except/pass is clearer
    "SIM108",   # ternary operator — readability preference
    "UP007",    # X | Y union syntax — already used, but don't force it
    "B007",     # unused loop variable — we use _ convention already
    "B023",     # function doesn't bind loop var — false positives with closures
    "B905",     # zip() without strict= — ESPN data lengths aren't guaranteed
]

[tool.ruff.lint.isort]
known-first-party = ["sports_skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/sports_skills"]
